2020-09-03  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Unexpected User-Agent on redirect
        https://bugs.webkit.org/show_bug.cgi?id=191858

        Reviewed by Youenn Fablet.

        Add unit tests to check the user agent is sent in headers and preserved after a redirect for both main resource
        and subresources.

        * TestWebKitAPI/Tests/WebKitGLib/TestDownloads.cpp:
        (serverCallback):
        (testDownloadUserAgent):
        (beforeAll):
        * TestWebKitAPI/Tests/WebKitGLib/TestLoaderClient.cpp:
        (testUserAgent):
        (serverCallback):
        (beforeAll):

2020-09-02  Ryosuke Niwa  <rniwa@webkit.org>

        Add CompactUniquePtrTuple
        https://bugs.webkit.org/show_bug.cgi?id=215936

        Reviewed by Darin Adler.

        Added basic unit tests for CompactUniquePtrTuple.

        * TestWebKitAPI/CMakeLists.txt:
        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WTF/CompactUniquePtrTuple.cpp: Added.
        (TestWebKitAPI::A): Adde.
        (TestWebKitAPI::A::A):
        (TestWebKitAPI::A::~A):
        (WTF_CompactUniquePtrTuple.Basic):

2020-09-03  Lauro Moura  <lmoura@igalia.com>

        [GTK][WPE] generate-bundle: Remove the zip extension from the uploaded checksum filename
        https://bugs.webkit.org/show_bug.cgi?id=216137

        Reviewed by Jonathan Bedard.

        * Scripts/generate-bundle:

2020-09-03  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, reverting r266507.
        https://bugs.webkit.org/show_bug.cgi?id=216135

        Broke JSC EWS

        Reverted changeset:

        "kill-old-processes: Remove stale Apache2 shm segments"
        https://bugs.webkit.org/show_bug.cgi?id=216068
        https://trac.webkit.org/changeset/266507

2020-09-03  Diego Pino Garcia  <dpino@igalia.com>

        kill-old-processes: Remove stale Apache2 shm segments
        https://bugs.webkit.org/show_bug.cgi?id=216068
